--- a/styles.css
+++ b/styles.css
@@ -5,29 +5,39 @@
 }
 
 body {
-  background-color: rgb(156, 168, 179);
+  background-image: url("./images/altumcode-oZ61KFUQsus-unsplash.jpg");
+  background-size: cover;
+  background-position: top;
+  background-attachment: fixed;
 }
 
 a {
   text-decoration: none;
-  color: white;
+  color: blue;
 }
 
 a:hover {
   color: black;
 }
 
+p {
+  color: #000;
+}
+
 header {
   text-align: center;
-  color: ghostwhite;
+  color: whitesmoke;
   background-image: url("./images/nubelson-fernandes--Xqckh_XVU4-unsplash.jpg");
   background-position: center;
   background-size: cover;
-  padding: 4em;
+  box-shadow: 10px 0px 10px red;
+  padding: 3em;
+  padding-right: 20em;
   border-radius: 20px;
   margin: 2em;
   margin-right: 12%;
   margin-left: 12%;
+  margin-bottom: 6em;
 }
 
 h1 {
@@ -35,11 +45,13 @@ h1 {
 }
 
 #badges-container {
+  float: left;
+  width: 40%;
   text-align: center;
-  background-color: rgb(204, 204, 217);
+  background-color: rgba(191, 241, 248, 0.687);
+  border: 3px solid aqua;
   padding: 2em;
   border-radius: 20px;
-  box-shadow: 10px 5px 5px black;
   margin: 5em;
   margin-right: 4%;
   margin-left: 4%;
@@ -49,14 +61,59 @@ h1 {
   padding-bottom: 30px;
 }
 
+#videos-container {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: rgba(191, 241, 248, 0.687);
+  border: 3px solid aqua;
+  padding: 3em;
+  border-radius: 10px;
+  box-shadow: 10px 5px 5px black;
+  margin: 1em;
+  margin-bottom: 2em;
+  margin-top: 4em;
+}
+
+#videos-container p {
+  padding-top: 1em;
+}
+
+#videos-container img {
+  justify-content: center;
+  border: 3px solid aqua;
+  box-shadow: 3px 3px 3px black;
+  transition: 0.2s;
+  margin: 1em;
+  width: 20em;
+  margin: 10px;
+}
+
+#videos-container img:hover {
+  border: 5px solid black;
+}
+
 img {
-  width: 120px;
+  width: 130px;
   background-color: white;
   border-radius: 10px;
-  border: 3px solid aqua;
-  transition: 0.3s;
+  border: 3px solid aquamarine;
+  transition: 0.2s;
+  box-shadow: 3px 3px 3px black;
 }
 
 img:hover {
   border: 5px solid black;
+}
+
+footer {
+  text-align: center;
+  clear: both;
+  width: 90%;
+  background-color: rgba(0, 255, 255, 0.846);
+  padding: 1em;
+  margin-bottom: 2em;
+}
+
+footer p {
+  font-size: 18px;
 }
