--- a/second_portfolio/styles.css
+++ b/second_portfolio/styles.css
@@ -43,6 +43,21 @@ main {
     -30px 0px 40px rgba(0, 0, 0, 0.3);
 }
 
+.btn {
+  padding: 0.5rem 2rem;
+  border: 1px #ccc solid;
+  display: block;
+  margin: 1rem 0 1rem;
+  border-radius: 50px;
+  text-decoration: none;
+  color: #333;
+  transition: background 200ms ease-in;
+}
+
+.btn:hover {
+  background: #f4f4f4;
+}
+
 /* Landing Area */
 #landing {
   background-color: #fff;
@@ -73,21 +88,6 @@ main {
   margin: 0;
 }
 
-.btn {
-  padding: 0.5rem 2rem;
-  border: 1px #ccc solid;
-  display: inline-block;
-  margin: 2rem 0 1rem;
-  border-radius: 50px;
-  text-decoration: none;
-  color: #333;
-  transition: background 200ms ease-in;
-}
-
-.btn:hover {
-  background: #f4f4f4;
-}
-
 /* Work Area */
 .header {
   padding: 1.5rem;
@@ -109,7 +109,7 @@ main {
   text-align: center;
 }
 
-/* Badges Area */
+/* Accolades and Badges Area */
 #badges-container {
   text-align: center;
   background-color: rgba(191, 241, 248, 0.687);
@@ -139,7 +139,6 @@ main {
   border: 3px solid black;
 }
 
-/* Accolades Area */
 .accolades {
   display: flex;
   justify-content: space-evenly;
@@ -148,6 +147,20 @@ main {
 .accolades p {
   border-left: dotted 1px #333;
   border-right: dotted 1px #333;
+}
+
+#certificates {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+#certificates img {
+  width: 300px;
+  margin: 0.5rem;
+  border: 3px solid black;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.75);
 }
 
 /* Footer Area */
@@ -169,6 +182,7 @@ footer h3 {
 
 #contact-sites {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-evenly;
   margin: 1rem;
 }
@@ -201,5 +215,9 @@ footer h3 {
 
   .accolades p {
     padding: 0.5rem;
+  }
+
+  #certificates img {
+    width: 500px;
   }
 }
