--- a/second_portfolio/styles.css
+++ b/second_portfolio/styles.css
@@ -44,7 +44,7 @@ main {
 }
 
 .btn {
-  padding: 0.5rem 2rem;
+  padding: 0.5em 2em;
   border: 1px #ccc solid;
   display: block;
   margin: 1rem 0 1rem;
