--- a/stopwatch/styles.css
+++ b/stopwatch/styles.css
@@ -28,3 +28,30 @@ ul li {
   list-style: none;
   padding: 10px, 0;
 }
+
+/* Screens Sizes Less Than 800px */
+
+@media (max-width: 800px) {
+  body {
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .stopwatch {
+    font-size: 12em;
+  }
+}
+
+@media (max-width: 700px) {
+  #controls button {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
+  }
+
+  .stopwatch {
+    font-size: 6em;
+  }
+}
